Refactor CommitteeController and CommitteeService for improved functionality and code clarity